--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,11 @@ nav p {
 
 nav p a {
     text-align: right;
-    color: rgb(0,0,0);
+    color: white;
+}
+
+img {
+    width: 300px;
 }
 
 footer {
@@ -25,6 +29,16 @@ footer {
     display: flex;
     justify-content: center;
     padding: 10px;
+}
+
+.anchor-footer {
+    background-color: rgb(0,0,0);
+    display: flex;
+    justify-content: center;
+    padding: 10px;
+    position: absolute;
+    width: 100%;
+    bottom: 0;
 }
 
 .splash {
@@ -40,11 +54,12 @@ footer {
 
 .splash p {
     background-color: rgb(214,210,196);
-    width: 50%;
+    max-width: 25%;
     padding: 5px;
     margin: 0;
     border-radius: 3px;
     text-align: center;
+    font-size: 2em;
 }
 
 h1 {
@@ -72,11 +87,21 @@ h2 {
     margin: 20px 100px 20px 100px;
 }
 
+h4 {
+    font-size: 6em;
+    text-align: center;
+    background-color:rgb(186, 12, 47);
+    margin: 10% auto 20% auto;
+    max-width: 50%;
+    border-radius: 10px;
+    border: solid;
+}
+
 .content {
     font-family: Georgia, 'Baskervville SC' serif;
     font-weight: 400;
     font-style:normal;
-    font-size: 1.2em;
+    font-size: 1.5em;
     color: rgb(0,0,0);
     justify-items: center;
     
@@ -126,17 +151,18 @@ a:hover {
     font-family: Georgia, 'Baskervville SC' serif;
     font-weight: 1000;
     font-style:normal;
-    font-size: 1em;
+    font-size: 1.5em;
     color: rgb(0,0,0);
     margin-top: 0px;
     background-color: rgb(214,210,196);
     border-radius: 20px;
     border: solid 10px;
     border-color: rgb(214,210,196);
+    min-height: 400px;
 }
 
 .card img {
-    width: 200px;
+    width: 500px;
     border-radius: 5px;
     border: solid;
     border-color: rgb(0,0,0);
@@ -147,13 +173,46 @@ a:hover {
     grid-template-columns: repeat(1, 1fr);
     gap: 20px;
     justify-items: center;
-    margin: 5px;
     font-family: Georgia, 'Baskervville SC' serif;
     font-weight: 1000;
     font-style:normal;
     font-size: 1.2em;
     border: solid;
     border-radius: 10px;
+    border-width: 10px;
     border-color: rgb(228,0,43);
     padding: 5px;
+    max-width: 10%;
+    min-width: 177px;
+    margin: 100px auto 100px auto;
+    background-color: white;
+}
+
+.one-col form {
+    max-width: 10%;
+}
+
+.project_title {
+    font-family: Georgia, 'Baskervville SC' serif;
+    font-weight: 1000;
+    font-style:normal;
+    font-size: 3em;
+    color: rgb(0,0,0);
+    margin: 20px 100px 20px 100px;
+    text-align: center;
+}
+
+.contact-nav {
+    text-align: center;
+    background-color: white;
+}
+
+.contact-nav p {
+    font-size: 1.5em;
+    margin: 0;
+    padding-bottom: 10px;
+}
+
+.contact-body {
+    background-color: rgb(158,162,162);
 }
